# api-data

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  fetch.py  mypy.ini  pyproject.toml  requirements.txt  terraform.tf  terraform.tfstate  terraform.tfstate.backup
.github/: CONTRIBUTING.md  README.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml
api/: fetch.py  french_config.py  job.py  util.py
api/api/: settings.py  urls.py
api/v1/: admin.py  api.py  forms.py  models.py  serializers.py  tests.py  urls.py
api/v1/migrations/: 0001_initial.py
src/api/: settings.py  urls.py
src/beta/: api.py  apps.py  models.py  serializers.py  tests.py  urls.py  util.py
src/beta/management/commands/: run_import.py
src/beta/migrations/: 0001_initial.py
src/get_data/: convert.py  currencies_config.py  fetch.py  french_config.py  job.py  tests.py  util.py
src/get_data/config/: boe.py  ecb.py  french.py  general.py
src/v1/: admin.py  api.py  models.py  serializers.py  tests.py  urls.py
terraform/: terraform.tf
