[tool.poetry]
name = "api-data"
version = "0.1.0"
description = "Perfolio's django-based data API"
authors = ["Perfolio"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9"
Django = "^3.1.2"
numpy = "^1.19.5"
pandas = "^1.1.3"
djangorestframework = "^3.12.2"
djangorestframework-csv = "^2.1.0"
djangorestframework-xml = "^2.0.0"
drf-renderer-xlsx = "^0.3.8"
uvicorn = "^0.12.2"
requests = "^2.24.0"
psycopg2-binary = "^2.8.6"
django-cors-headers = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3"
flake8 = "^3.8.4"
mypy = "^0.782"
isort = "^5.6.1"
flake8-docstrings = "^1.5.0"
pre-commit = "^2.7.1"

[tool.black]
line-length = 90
target-version = ['py36']
exclude = '''
/(
    \.git
    | \.github
    | \api\__pycache__
    | \venv
)/
'''

[tool.isort]
profile = "black"
line_length = 90
combine_as_imports = true
src_paths = ["src"]
